Supports 1.20.2 - 1.21.4+